add general structure

--- a/index.html
+++ b/index.html
@@ -9,9 +9,63 @@
   <!-- mine css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Document</title>
+  <title>Sony</title>
 </head>
+
 <body>
-  <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, molestiae. Eos voluptates porro odit impedit commodi itaque consequuntur amet, eaque quas odio voluptas dignissimos? Eveniet maxime aliquid officia reiciendis neque?</div>
+  <!-- header -->
+  <header>
+    <section class="logo"></section>
+    <section class="header-navbar"></section>
+  </header>
+
+  <!-- main -->
+  <main>
+    <!-- game banner -->
+    <section class="game-banner"></section>
+    <!-- /game banner -->
+
+    <!-- 6 cards -->
+    <section></section>
+    <!-- /6 cards -->
+
+    <!-- explore ps5 -->
+    <section></section>
+    <!-- /explore ps5 -->
+
+    <!-- game banner -->
+    <section class="game-banner"></section>
+    <!-- /game banner -->
+
+    <!-- 12 cards -->
+    <section></section>
+    <!-- /12 cards -->
+
+    <!-- explore ps4 -->
+    <section></section>
+    <!-- /explore ps4 -->
+
+    <!-- promo banner -->
+    <section class="promo-banner psn-plus"></section>
+    <!-- /promo banner -->
+
+    <!-- sales ps-store -->
+    <section></section>
+    <!-- /sales ps-store -->
+
+    <!-- promo banner -->
+    <section class="promo-banner psn-now"></section>
+    <!-- /promo banner -->
+
+    <!-- social media  -->
+    <section></section>
+    <!-- /social media  -->
+  </main>
+
+  <!-- footer -->
+  <footer>
+    <section class="footer-navbar"></section>
+    <section class="copyright"></section>
+  </footer>
 </body>
 </html>
