--- a/index.html
+++ b/index.html
@@ -23,7 +23,157 @@
       </div>
     </section>
     <section class="header-navbar">
-      
+      <div class="row">
+        <div class="col-12">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <img src="img/play_logo.svg" alt="" class="navbar-brand">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Giochi
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Hardware
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Servizi
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      novit&abreve;
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Fai acquisti
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      SUpporto
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      My PlayStation
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <button type="button" class="btn btn-secondary">Accedi</button>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="img/lens.svg" alt="">
+                    </a>
+                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                </div>
+                
+            </div>
+          </nav>
+        </div>
+      </div>
     </section>
   </header>
 
@@ -75,5 +225,6 @@
     <section class="footer-navbar"></section>
     <section class="copyright"></section>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
