--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Giochi
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -50,7 +50,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Hardware
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -66,7 +66,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Servizi
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -82,7 +82,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       novit&abreve;
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -98,7 +98,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Fai acquisti
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -114,8 +114,8 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      SUpporto
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Supporto
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -130,46 +130,33 @@
                     </ul>
                   </li>
                 </ul>
+                <span>
+                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          My PlayStation
+                        </a>
+                        <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                          <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                          <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                          <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
+                          <li>
+                            <hr class="dropdown-divider">
+                          </li>
+                          <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <button type="button" class="btn btn-secondary rounded-pill">Accedi</button>  
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img class="lens-icon" src="img/lens.svg" alt="">
+                    </a>
+                  </div>  
+                </span>
               </div>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      My PlayStation
-                    </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
-                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
-                      <li>
-                        <hr class="dropdown-divider">
-                      </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <button type="button" class="btn btn-secondary">Accedi</button>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="img/lens.svg" alt="">
-                    </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
-                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
-                      <li>
-                        <hr class="dropdown-divider">
-                      </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                    </ul>
-                  </li>
-                </div>
-                
             </div>
           </nav>
         </div>
