--- a/index.html
+++ b/index.html
@@ -167,7 +167,15 @@
   <!-- main -->
   <main>
     <!-- game banner -->
-    <section class="game-banner"></section>
+    <section class="game-banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /game banner -->
 
     <!-- 6 cards -->
@@ -179,7 +187,7 @@
     <!-- /explore ps5 -->
 
     <!-- game banner -->
-    <section class="game-banner"></section>
+    <!-- <section class="game-banner"></section> -->
     <!-- /game banner -->
 
     <!-- 12 cards -->
