--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <section class="header-navbar">
       <div class="row">
         <div class="col-12">
-          <nav class="navbar navbar-expand-lg navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light pb-0">
             <div class="container-fluid">
               <img src="img/play_logo.svg" alt="" class="navbar-brand">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
+              <div class="collapse navbar-collapse justify-content-between fw-bold" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Giochi
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Hardware
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -69,7 +69,7 @@
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Servizi
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -85,7 +85,7 @@
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       novit&abreve;
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -101,7 +101,7 @@
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Fai acquisti
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -117,7 +117,7 @@
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Supporto
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -137,7 +137,7 @@
                         <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           My PlayStation
                         </a>
-                        <ul class="dropdown-menu w-100 list-inline text-center" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
