add some corrections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Giochi
+                      Giochi<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -51,7 +51,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Hardware
+                      Hardware<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -67,7 +67,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Servizi
+                      Servizi<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -83,7 +83,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      novit&abreve;
+                      novit&abreve;<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -99,7 +99,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Fai acquisti
+                      Fai acquisti<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -115,7 +115,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Supporto
+                      Supporto<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -135,7 +135,7 @@
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          My PlayStation
+                          My PlayStation<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
                         </a>
                         <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -150,7 +150,7 @@
                         </ul>
                       </li>
                     </ul>
-                    <button type="button" class="btn btn-secondary rounded-pill">Accedi</button>  
+                    <button type="button" class="btn btn-secondary rounded-pill acces-btn">Accedi</button>  
                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img class="lens-icon" src="img/lens.svg" alt="">
                     </a>
@@ -220,6 +220,7 @@
     <section class="footer-navbar"></section>
     <section class="copyright"></section>
   </footer>
+  <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
