setting first jumbo

--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            
+            <img class="game-logo pb-4" src="img/returnal-hero-banner-logo.png" alt="reurnal-logo">
+            <h2 class="pb-4">Rompi il cerchio</h2>
+            <p class="pb-3 game-desc">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su <span class="text-uppercase">ps5</span>.</p>
           </div>
         </div>
       </div>
