end first jumbo

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                   <li class="nav-item">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Fai acquisti
+                    </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -176,6 +177,7 @@
             <img class="game-logo pb-4" src="img/returnal-hero-banner-logo.png" alt="reurnal-logo">
             <h2 class="pb-4">Rompi il cerchio</h2>
             <p class="pb-3 game-desc">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su <span class="text-uppercase">ps5</span>.</p>
+            <button type="button" class="btn btn-danger rounded-pill mb-5 fw-bold">Acquista ora</button>
           </div>
         </div>
       </div>
