--- a/index.html
+++ b/index.html
@@ -213,7 +213,24 @@
     <!-- /6 cards -->
 
     <!-- explore ps5 -->
-    <section></section>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora unde facere quis exercitationem inventore ea magnam illum dicta quo corporis aut incidunt adipisci vitae, quidem perferendis modi quas! Nemo, dolores?</div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt quam quo culpa autem corrupti omnis voluptatum ex odit et. Alias nesciunt sequi unde cum commodi ad aliquam saepe fugiat. Nostrum.</div>
+          <div class="col-12 col-md-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt itaque eos, maiores rem reprehenderit dolore modi nulla. Numquam necessitatibus ea unde ipsum! Magni voluptatem nisi, obcaecati incidunt officia neque laudantium?</div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4 col-md-2">ciao</div>
+          <div class="col-4 col-md-2">ciao</div>
+          <div class="col-4 col-md-2">ciao</div>
+          <div class="col-4 col-md-2">ciao</div>
+          <div class="col-4 col-md-2">ciao</div>
+        </div>
+      </div>
+    </section>
     <!-- /explore ps5 -->
 
     <!-- game banner -->
