testing game banner 2

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img class="game-logo pb-4" src="img/returnal-hero-banner-logo.png" alt="reurnal-logo">
+            <img class="game-logo returnal pb-4" src="img/returnal-hero-banner-logo.png" alt="reurnal-logo">
             <h2 class="pb-4">Rompi il cerchio</h2>
             <p class="pb-3 game-desc">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su <span class="text-uppercase">ps5</span>.</p>
             <button type="button" class="btn btn-danger rounded-pill mb-5 fw-bold">Acquista ora</button>
@@ -249,7 +249,18 @@
     <!-- /explore ps5 -->
 
     <!-- game banner -->
-    <!-- <section class="game-banner"></section> -->
+    <section class="game-banner it-takes-two">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <img class="game-logo it-takes-two pb-2 pt-5" src="img/it-takes-two-logo.png" alt="reurnal-logo">
+            <h2 class="pb-4">Un'avventura cooperativa selvaggia ti attende</h2>
+            <p class="pb-3 game-desc">Trova un amico e partite insieme per l'avventura pi&uacute; folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+            <button type="button" class="btn btn-danger rounded-pill mb-5 fw-bold">Acquista ora</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /game banner -->
 
     <!-- 12 cards -->
