end it takes two section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="col-12">
             <img class="game-logo it-takes-two pb-2 pt-5" src="img/it-takes-two-logo.png" alt="reurnal-logo">
             <h2 class="pb-4">Un'avventura cooperativa selvaggia ti attende</h2>
-            <p class="pb-3 game-desc">Trova un amico e partite insieme per l'avventura pi&uacute; folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+            <p class="pb-3 game-desc fw-bold">Trova un amico e partite insieme per l'avventura pi&uacute; folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
             <button type="button" class="btn btn-danger rounded-pill mb-5 fw-bold">Acquista ora</button>
           </div>
         </div>
