repair explore ps-5 section

--- a/index.html
+++ b/index.html
@@ -231,17 +231,27 @@
             <img class="w-100" src="img/playstation-5-thumb.png" alt="">
           </div>
         </div>
-        <div class="row gadget-ps5">
+        <div class="row gadget-ps5 text-center mb-4">
           <div class="col-4 col-md-2 ">
-            <img class="w-100" src="img/playstation-5-thumb.png" alt="ps5"></div>
+            <img class="w-100 mb-1" src="img/playstation-5-thumb.png" alt="ps5">
+            <h6 class="d-none d-md-block smaller-text">Console <span class="text-uppercase">ps5</span></h6>
+          </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100" src="img/joypad-thumb.png" alt="joystick"></div>
+            <img class="w-100 mb-1" src="img/joypad-thumb.png" alt="joystick">
+            <h6 class="d-none d-md-block smaller-text">Controller wireless <span class="trademark">DualSense</span></h6>
+          </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100" src="img/headset-thumb.png" alt="headphones"></div>
+            <img class="w-100 mb-1" src="img/headset-thumb.png" alt="headphones">
+            <h6 class="d-none d-md-block smaller-text">Cuffie wireless con microfono <span class="trademark text-uppercase">pulse 3</span></h6>
+          </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100" src="img/remote-thumb.png" alt="console controller"></div>
+            <img class="w-100 mb-1" src="img/remote-thumb.png" alt="console controller">
+            <h6 class="d-none d-md-block smaller-text">Telecomando Media</h6>
+          </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100" src="img/camera-thumb.jpg" alt="webcam"></div>
+            <img class="w-100 mb-1" src="img/camera-thumb.jpg" alt="webcam">
+            <h6 class="d-none d-md-block smaller-text">Telecamera <span class="text-uppercase">hd</span></h6>
+          </div>
         </div>
       </div>
     </section>
@@ -324,7 +334,23 @@
     <!-- /12 cards -->
 
     <!-- explore ps4 -->
-    <section></section>
+    <section class="explore-ps4">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="pt-5 pb-4">Esplora <span>Playstation</span> 4</h2>
+            <p class="mb-0">Giochi incredibili e intrattenimento senza fine.</p>
+            <p>Non c'&eacute; mai stato un momento migliore per giocare sulla tua <span class="text-uppercase">ps4</span>.</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="" alt="ps4">
+
+          </div>
+          <div class="col-12 col-md-4"></div>
+          <div class="col-12 col-md-4"></div>
+        </div>
+      </div>
+    </section>
     <!-- /explore ps4 -->
 
     <!-- promo banner -->
