end explore ps4 section

--- a/index.html
+++ b/index.html
@@ -339,15 +339,27 @@
         <div class="row">
           <div class="col-12 text-center">
             <h2 class="pt-5 pb-4">Esplora <span>Playstation</span> 4</h2>
-            <p class="mb-0">Giochi incredibili e intrattenimento senza fine.</p>
-            <p>Non c'&eacute; mai stato un momento migliore per giocare sulla tua <span class="text-uppercase">ps4</span>.</p>
+            <p class="mb-0 fs-1_3">Giochi incredibili e intrattenimento senza fine.</p>
+            <p class="fs-1_3">Non c'&eacute; mai stato un momento migliore per giocare sulla tua <span class="text-uppercase">ps4</span>.</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="" alt="ps4">
-
+            <img class="w-100" src="img/ps4-slim-homepage-image-block.jpg" alt="ps4">
+            <h3 class="fs-2_3">PlayStation 4</h3>
+            <p class="fs-1_3 mb-0">Giochi incredibili live su <span class="text-uppercase">ps4</span>, con 1 <span class="text-uppercase">tb</span> di spazio di archiviazione.</p>
+            <span><button type="button" class="btn btn-primary rounded-4 my-3">Scopri di pi&uacute;</button></span>
           </div>
-          <div class="col-12 col-md-4"></div>
-          <div class="col-12 col-md-4"></div>
+          <div class="col-12 col-md-4">
+            <img class="w-100" src="img/double11-202010-tw-psvr.jpg" alt="visore">
+            <h3 class="fs-2_3">PlayStation <span class="text-uppercase">vr</span></h3>
+            <p class="mb-0 fs-1_3">Oltre 500 titole ed esperienze di gioco. Scoprili tutti.</p>
+            <span><button type="button" class="btn btn-primary rounded-4 my-3">Scopri di pi&uacute;</button></span>
+          </div>
+          <div class="col-12 col-md-4">
+            <img class="w-100" src="img/dualshock-4-listing-thumb.jpg" alt="">
+            <h3 class="fs-2_3">Accessori</h3>
+            <p class="fs-1_3 mb-0">Migliora la tua esperienza<span class="text-uppercase">ps4</span>, con una gamma di accessori ufficiali.</p>
+            <span><button type="button" class="btn btn-primary rounded-4 my-3">Scopri di pi&uacute;</button></span>
+          </div>
         </div>
       </div>
     </section>
