end ps-plus section

--- a/index.html
+++ b/index.html
@@ -365,15 +365,28 @@
     </section>
     <!-- /explore ps4 -->
 
-    <!-- promo banner -->
-    <section class="promo-banner psn-plus"></section>
+    <!-- promo banner psn-plus-->
+    <section class="promo-banner psn-plus">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 resizing-padding-lg">
+            <img class="logo-psn-plus" src="img/ps-plus-logo.png" alt="PlayStation plus">
+            <p class="my-4 fs-1_15">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+            <span><button type="button" class="btn btn-outline-primary light-gray-bg rounded-4 border-0">Esplora PlayStation Plus</button></span>
+          </div>
+          <div class="col-md-6 d-none d-md-block">
+            <img class="w-100" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /promo banner -->
 
     <!-- sales ps-store -->
     <section></section>
     <!-- /sales ps-store -->
 
-    <!-- promo banner -->
+    <!-- promo banner psn-now-->
     <section class="promo-banner psn-now"></section>
     <!-- /promo banner -->
 
