--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <!-- /game banner -->
 
     <!-- 6 cards -->
-    <section class="pt-5">
+    <section class="pt-5 mb-5">
       <div class="container">
         <div class="row">
           <div class="col-6 col-sm-4 col-lg-2 pb-4">
@@ -212,7 +212,7 @@
     <!-- /6 cards -->
 
     <!-- explore ps5 -->
-    <section class="explore-ps5">
+    <section class="explore-ps5 pt-5">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
@@ -221,10 +221,10 @@
             <p class="fs-5 attract-buyers mb-5">Tuffati in nuove possibilit&aacute; di gioco completamente inaspettate</p>
           </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center mb-5">
           <div class="col-12 col-md-6">
             <h2 class="fs-1 pe-5">Console Playstation 5</h2>
-            <p class="fs-5 attract-buyers">Sperimenta la nuova generazione di incredibili giochi Playstation.</p>
+            <p class="mt-4 attract-buyers">Sperimenta la nuova generazione di incredibili giochi Playstation.</p>
             <span><button type="button" class="btn btn-primary rounded-4">Maggiori informazioni</button></span>
           </div>
           <div class="col-12 col-md-6">
@@ -277,8 +277,8 @@
       <div class="container">
         <div class="row">
           <div class="col-11">
-            <h2 class="pt-5 fs1">Nuove uscite</h2>
-            <p class="fs-2">Giochi icredibili per <span class="text-uppercase">ps4</span> e <span class="text-uppercase">ps5</span> disponibili ora</p>
+            <h2 class="pt-5">Nuove uscite</h2>
+            <p class="">Giochi icredibili per <span class="text-uppercase">ps4</span> e <span class="text-uppercase">ps5</span> disponibili ora</p>
           </div>
           <div class="col-6 col-sm-4 col-lg-2 mb-5">
             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
@@ -337,7 +337,7 @@
     <section class="explore-ps4">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center lh-sm">
             <h2 class="pt-5 pb-4">Esplora <span>Playstation</span> 4</h2>
             <p class="mb-0 fs-1_3">Giochi incredibili e intrattenimento senza fine.</p>
             <p class="fs-1_3">Non c'&eacute; mai stato un momento migliore per giocare sulla tua <span class="text-uppercase">ps4</span>.</p>
@@ -372,7 +372,7 @@
           <div class="col-12 col-md-6 resizing-padding-lg">
             <img class="logo-psn-plus" src="img/ps-plus-logo.png" alt="PlayStation plus">
             <p class="my-4 fs-1_15">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
-            <span><button type="button" class="btn btn-outline-primary light-gray-bg rounded-4 border-0">Esplora PlayStation Plus</button></span>
+            <span><button type="button" class="btn btn-outline-primary light-gray-bg rounded-4 border-0 mt-2">Esplora PlayStation Plus</button></span>
           </div>
           <div class="col-md-6 d-none d-md-block">
             <img class="w-100" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
