end sales section

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <!-- /explore ps4 -->
 
     <!-- promo banner psn-plus-->
-    <section class="promo-banner psn-plus">
+    <section class="promo-banner psn-plus mb-5">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 resizing-padding-lg">
@@ -383,7 +383,25 @@
     <!-- /promo banner -->
 
     <!-- sales ps-store -->
-    <section></section>
+    <section class="sales">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center title-sale my-5">
+            <h2 class="mb-5">Nuovi sconti sul PlayStation Store</h2>
+            <p>Sconti pazzeschi, collezioni curate e saldi stagionali su <span class="text-uppercase">ps5</span>, <span class="text-uppercase">ps4</span> e <span class="text-uppercase">ps vr</span>, tutti in un unico posto.</p>
+          </div>
+          <div class="col-12 col-md-4 mt-md-3">
+            <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="games cheaper" class="w-100 mb-5">
+          </div>
+          <div class="col-12 col-md-4 mt-md-3">
+            <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="games cheaper" class="w-100 mb-5">
+          </div>
+          <div class="col-12 col-md-4 mt-md-3">
+            <img src="img/playstation-store-free-to-play-spotlight.png" alt="games cheaper" class="w-100 mb-5">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /sales ps-store -->
 
     <!-- promo banner psn-now-->
