end ps now section

--- a/index.html
+++ b/index.html
@@ -405,7 +405,20 @@
     <!-- /sales ps-store -->
 
     <!-- promo banner psn-now-->
-    <section class="promo-banner psn-now"></section>
+    <section class="promo-banner psn-now">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 resizing-padding-lg">
+            <img class="logo-psn-now" src="img/ps-now-logo-two-column.png" alt="PlayStation now">
+            <p class="my-4 fs-1_15">Migliora l'accesso immediato a una vastissima raccolta di oltre 800 giochi per <span class="text-uppercase">ps4</span>, <span class="text-uppercase">ps5</span> e <span class="text-uppercase">ps2</span> su <span class="text-uppercase">ps4</span> o <span class="text-uppercase">pc</span> Windows, con nuovi titoli aggiunti ogni mese.</p>
+            <span><button type="button" class="btn btn-outline-primary light-gray-bg rounded-4 border-0 mt-2 mb-3">Esplora PlayStation Plus</button></span>
+          </div>
+          <div class="col-md-6 d-none d-md-block">
+            <img class="w-100" src="img/ps-now-april-featured-image-block.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /promo banner -->
 
     <!-- social media  -->
