end social media section

--- a/index.html
+++ b/index.html
@@ -422,7 +422,27 @@
     <!-- /promo banner -->
 
     <!-- social media  -->
-    <section></section>
+    <section class="social-media">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 text-center">
+            <h2 class="my-5 fs-1">Seguici sui social media</h2>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2">
+            <img src="img/twitter.jpg" alt="twitter" class="w-101 mb-5">
+          </div>
+          <div class="col-6 col-sm-3 col-md-2">
+            <img src="img/facebook.jpg" alt="facebook" class="w-101 mb-5">
+          </div>
+          <div class="col-6 col-sm-3 col-md-2">
+            <img src="img/instagram.jpg"  alt="instagram" class="w-101 mb-5">
+          </div>
+          <div class="col-6 col-sm-3 col-md-2">
+            <img src="img/youtube.png" alt="youtube" class="w-101 mb-5">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /social media  -->
   </main>
 
