--- a/index.html
+++ b/index.html
@@ -429,16 +429,16 @@
             <h2 class="my-5 fs-1">Seguici sui social media</h2>
           </div>
           <div class="col-6 col-sm-3 col-md-2">
-            <img src="img/twitter.jpg" alt="twitter" class="w-101 mb-5">
+            <img src="img/twitter.jpg" alt="twitter" class="w-100 mb-5">
           </div>
           <div class="col-6 col-sm-3 col-md-2">
-            <img src="img/facebook.jpg" alt="facebook" class="w-101 mb-5">
+            <img src="img/facebook.jpg" alt="facebook" class="w-100 mb-5">
           </div>
           <div class="col-6 col-sm-3 col-md-2">
-            <img src="img/instagram.jpg"  alt="instagram" class="w-101 mb-5">
+            <img src="img/instagram.jpg"  alt="instagram" class="w-100 mb-5">
           </div>
           <div class="col-6 col-sm-3 col-md-2">
-            <img src="img/youtube.png" alt="youtube" class="w-101 mb-5">
+            <img src="img/youtube.png" alt="youtube" class="w-100 mb-5">
           </div>
         </div>
       </div>
@@ -448,7 +448,49 @@
 
   <!-- footer -->
   <footer>
-    <section class="footer-navbar"></section>
+    <section class="footer-navbar pt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <img src="img/ps-footer.svg" alt="logo playstation" class="w-25">
+            <p class="mt-4 mb-5"><span class="me-2"><i class="fas fa-globe"></i></span>Country / Region: Italy</p>
+          </div>
+          <div class="col-12 col-lg-6 mb-5">
+            <div class="row">
+              <col-12 class="col-md-4">
+                <ul class="footer-link-list">
+                  <li><a href="" class="mb">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                </ul>
+              </col-12>
+              <col-12 class="col-md-4">
+                <ul class="footer-link-list">
+                  <li><a href="" class="mb">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                </ul>
+              </col-12>
+              <col-12 class="col-md-4">
+                <ul class="footer-link-list">
+                  <li><a href="" class="mb">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                  <li><a href="">Link footer n</a></li>
+                </ul>
+              </col-12>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="copyright"></section>
   </footer>
   <!-- javascript -->
