end header hoover

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                       <li>
                         <hr class="dropdown-divider">
                       </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link giochi</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -62,9 +62,9 @@
                       <li>
                         <hr class="dropdown-divider">
                       </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link hardware</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -78,9 +78,9 @@
                       <li>
                         <hr class="dropdown-divider">
                       </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link servizi</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -94,9 +94,9 @@
                       <li>
                         <hr class="dropdown-divider">
                       </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link novit&aacute;</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -110,9 +110,9 @@
                       <li>
                         <hr class="dropdown-divider">
                       </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link Fai acquisti</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -126,9 +126,9 @@
                       <li>
                         <hr class="dropdown-divider">
                       </li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                      <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link supporto</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
+                      <li class="list-inline-item"><a class="dropdown-item" href="#">Sub link</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -144,16 +144,12 @@
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                           <li>
-                            <hr class="dropdown-divider">
-                          </li>
-                          <li class="list-inline-item text-uppercase"><a class="dropdown-item" href="#">Ps7</a></li>
-                          <li class="list-inline-item text-uppercase"><a class="dropdown-item" href="#">Ps7</a></li>
-                          <li class="list-inline-item text-uppercase"><a class="dropdown-item" href="#">Ps7</a></li>
+                            
                         </ul>
                       </li>
                     </ul>
                     <button type="button" class="btn btn-secondary rounded-pill acces-btn">Accedi</button>  
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link lens-container" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img class="lens-icon" src="img/lens.svg" alt="">
                     </a>
                   </div>  
