--- a/index.html
+++ b/index.html
@@ -180,11 +180,13 @@
     <!-- /game banner -->
 
     <!-- 6 cards -->
-    <section class="pt-5 mb-5">
+    <section class="pt-5 mb-5 card-6">
       <div class="container">
         <div class="row">
           <div class="col-6 col-sm-4 col-lg-2 pb-4">
-            <img class="w-100 rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            <div class="border-card">
+              <img class="w-100 rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            </div>
           </div>
           <div class="col-6 col-sm-4 col-lg-2 pb-4">
             <img class="w-100 rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
